# DDAServer

./: .gitignore  .pre-commit-config.yaml  README.md  app.DOCKERFILE  manage.py  pyproject.toml
.github/workflows/: build_app.yml  deploy_app.yml
.run/: Make Migrations.run.xml  Migrate.run.xml  Run Local.run.xml  Run mypy.run.xml  Template Shell Script.run.xml
dda/: asgi.py  env.py  settings.py  urls.py
dda/routes/: api.py  http.py
dda/v1/: exceptions.py
dda/v1/migrations/: 0001_create_user_and_session_model.py  0001_create_user_models.py  0002_sessiontoken_expires_at_as_datetime.py  0002_user_and_session_uniqueness.py  0003_user_is_phone_verified.py  0004_approle_campaign_appresourcerole.py  0005_seed_roles.py
dda/v1/models/: __init__.py  authz.py  base.py  campaign.py  user.py
dda/v1/routes/: api.py  exception_handlers.py  http.py
dda/v1/routes/glb/: __init__.py  authn.py  health.py
dda/v1/routes/middleware/: authentication.py  transaction.py  types.py
dda/v1/routes/user/: __init__.py
dda/v1/schemas/: authn.py  base.py  user.py
dda/v1/services/: user.py
dda/v1/services/authn/: __init__.py  google.py
deploy/dda-backend/: .helmignore  Chart.yaml  values-dev.yaml
deploy/dda-backend/dev/: secrets.yaml  values.yaml
deploy/dda-backend/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  jobs.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
deploy/dda-backend/templates/tests/: test-connection.yaml
scripts/: update-ecr-local-secret.sh
tests/: conftest.py  settings.py  test_env.py  types.py  wrapper.py
tests/test_v1/test_routes/: test_authn.py  test_health.py
tests/test_v1/test_routes/test_glb/: test_authn.py  test_health.py  test_logout.py  test_me.py
tests/test_v1/test_routes/test_user/: test_get_profile.py  test_update_profile.py
