[tool.poetry]
name = "ddaserver"
version = "0.0.1"
description = "Server component for DDA"
authors = ["Austin Graham <austingraham731@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
django-ninja = "^1.3.0"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.9.9"
django-stubs = "^5.1.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-django = "^4.10.0"
pytest-env = "^1.1.5"
pytest-asyncio = "^0.25.3"


[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true
disallow_untyped_defs = true


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
env = [
    "DJANGO_SECRET=test"
]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
